@@ -4,6 +4,10 @@ set default-user "nicholas"
 #set allow-multiple
 set purge-after none
 #set proxy "socks://localhost:9999/"
+set timeout 60
+
+# Verify SSL certificates.
+set verify-certificates
 
 # These seem to vaguely work okay for me.
 set queue-high 5
@@ -62,6 +66,7 @@ action "marxism" {
 action "bugtraq" maildir "${path}/bugtraq"
 action "forensics" maildir "${path}/forensics"
 action "freebsd-hackers" maildir "${path}/freebsd-hackers"
+action "freebsd-current" maildir "${path}/freebsd-current"
 action "gnu" maildir "${path}/gnu-%1"
 action "linux-kernel" maildir "${path}/linux-kernel"
 action "netbsd" maildir "${path}/netbsd-%1"
@@ -98,6 +103,7 @@ account "gmail.nicm123" pop3s server "pop.googlemail.com" port 995
 account "gmail.nicm321" pop3s server "pop.googlemail.com" port 995
 	user "nicm321@gmail.com"
 account "eutonian" imap server "eutonian.ath.cx"
+
 # The stdin account is disabled: it will be ignored unless explicitly requested
 # using the -a switch on the command line.
 account "stdin" disabled stdin
@@ -116,13 +122,13 @@ match "^From:.*root@[a-z]*.nicm.ath.cx" in headers account "stdin"
 account "archive" disabled maildirs { 
 	"${path}/bugtraq"
 	"${path}/forensics"
-	"${path}/freebsd-hackers"
+	"${path}/freebsd-{current,hackers}"
 	"${path}/full-disclosure"
 	"${path}/gnu-{gcc,gdb}"
 	"${path}/linux-kernel"
 	"${path}/marxism"
 	"${path}/netbsd-{source-changes,tech-kern,tech-misc}"
-	"${path}/news-{agvp,clax,clc,colds,csc,cubom,cui,cup}"
+	"${path}/news-{agvp,clax,clc,colds,csc,cubom,cup}"
 	"${path}/openbsd-{bugs,misc,ports,source-changes,tech}"
 	"${path}/pf"
 	"${path}/secureshell"
@@ -157,7 +163,6 @@ action "news-comp.os.linux.development.system" maildir "${path}/news-colds"
 action "news-comp.std.c" maildir "${path}/news-csc"
 action "news-comp.unix.bsd.openbsd.misc" maildir "${path}/news-cubom"
 action "news-comp.unix.programmer" maildir "${path}/news-cup"
-action "news-comp.unix.internals" maildir "${path}/news-cui"
 
 account "news" disabled nntp
 	server "news.ntlworld.com"
@@ -169,14 +174,13 @@ account "news" disabled nntp
 		"comp.std.c"
 		"comp.unix.bsd.openbsd.misc"
 		"comp.unix.programmer"
-		"comp.unix.internals"
 	}
 	cache "%h/.fdm.cache"
 
 match all account "news" {
 	match "\\<HTML\\>" in body action "junk"
 
-	# comp.lang.c endless discussion/off-topic usual suspects
+	# comp.lang.c endless discussion/off-topic usual suspects.
 	match "^From:.*gazelle@xmission.xmission.com" in headers action "drop"
 	match "^From:.*rlb@hoekstra-uitgeverij.nl" in headers action "drop"
 	match "^From:.*rjh@see.sig.invalid" in headers action "drop"
@@ -188,6 +192,9 @@ match all account "news" {
 		"top-post( |ing)" in body action "drop"
 	match "^From:.*rgrdev@gmail.com" in headers action "drop"
 	match "^From:.*chris@phaedsys.org" in headers action "drop"
+
+	# Real idiots.
+	match "^From:.*MI5Victim@mi5.gov.uk" in headers action drop
 
 	# Match based on the group name, this avoids problems with cross-
 	# posting.
@@ -205,8 +212,6 @@ match all account "news" {
 		action "news-%[group]"
 	match string "%[group]" to "comp.unix.programmer"
 		action "news-%[group]"
-	match string "%[group]" to "comp.unix.internals"
-		action "news-%[group]"
 	match all action "drop"
 }
 # ------------------------------------------------------------------------------
@@ -223,6 +228,9 @@ match size > 1K and size < 4K action "mbox" continue
 # Drop HTML mail to gmail accounts.
 match "\\<HTML\\>" in body account "gmail*" action "junk"
 
+# Google Groups is really stupid and sends me everything twice.
+match "Sender:.*@googlegroups.com" in headers account "ntlworld" action drop
+
 # Junk (eejits).
 match ".*YAHOO.*BOOTER.*" in body action "junk"
 
@@ -233,6 +241,7 @@ match "^From:.*@citi-bank.com" in headers action "junk"
 match "^From:.*@emaillabs.com" in headers action "junk"
 match "^From:.*baypos@gmail.com" in headers action "junk"
 match "^From:.*E-Greeting" in headers action "junk"
+match "^From:.*@postcard.org" in headers action "junk"
 
 # Junk (ISP garbage).
 match "^From:.*@newsletter.ntlworld.com" in headers action "junk"
@@ -242,14 +251,14 @@ match "^From:.*mailings@(gmx.net|gmx-gmbh.de)" in headers account "gmx"
 
 # Test add-header.
 action "add-header" add-header "Lines"
-	"%[lines]; body=%[body_lines]; header=%[header_lines]"
+	value "%[lines]; body=%[body_lines]; header=%[header_lines]"
 match all action "add-header" continue
 
 # ------------------------------------------------------------------------------
 # OpenBSD.  All my openbsd maildirs are named openbsd-<something>, where
 # <something> is the same as the sender the mail comes from, so I can shorthand
 # this by using a subexpression. I save the regexp subexpression as a tag
-# called list, then the "openbsd" action delivers to a maildir called
+# called list, then the final action delivers to a maildir called
 # "openbsd-%[list]". I do need a special-case rule for gnats, which should go
 # into openbsd-bugs as well as mails to bugs@, and announce, which I want in my
 # inbox.
@@ -276,7 +285,7 @@ match "^Sender:[ \t]*owner-([a-z-]*)@openbsd\\.org" in headers {
 		"opinion|pre-?orders?|ppp|kerberos|afs|\\[OT\\]|off-topic|" +
 		"thanks|isos?|vmware|postfix|sasl|greytrap|isakmpd|wireless|" +
 		"google|firefox|ipcomp|dovecot|apache|youtube|openoffice|php|" +
-		"forum|clamav|wep"
+		"forum|clamav|wep|vlan|squid|wpa|wep"
 	$unless = "panic"
 	match string "%[list]" to "misc" and
 		not "From:.*(${always})" in headers and
@@ -289,12 +298,12 @@ match "^Sender:[ \t]*owner-([a-z-]*)@openbsd\\.org" in headers {
 		match "^References:[ \t]*(.*)" in headers and
 			exec ${is_dead} returns (0, )
 			actions { "openbsd-killed" "mark-read" }
-		match "^In-Reply-To:[ \t]*(.*)" in headers and
+		match "^In-Reply-To:[ \t]*([^()]*)" in headers and
 			exec ${is_dead} returns (0, )
 			actions { "openbsd-killed" "mark-read" }
 	}
 
-	# Drop eejits and add the message-ids to the ignore list.
+	# Drop eejits/trolls and add the message-ids to the ignore list.
 	match "^From:.*clock@twibright.com" in headers
 		actions { "die" "openbsd-killed" }
 	match "^From:.*dfeustel@mindspring.com" in headers
@@ -305,6 +314,8 @@ match "^Sender:[ \t]*owner-([a-z-]*)@openbsd\\.org" in headers {
 	match "^From:.*suck@my-balls.com" in headers
 		actions { "die" "openbsd-killed" }
 	match "^From:.*chefren@pi.net" in headers
+		actions { "die" "openbsd-killed" }
+	match "^From:.*demuel@thephinix.org" in headers
 		actions { "die" "openbsd-killed" }
 
  	# Deliver to openbsd-%[list].
@@ -348,7 +359,7 @@ match "^X-Mailing-List:.*linux-kernel@vger.kernel.org" in headers
 	action "linux-kernel"
 
 # openssh-unix-dev
-match "X-BeenThere: openssh-unix-dev@mindrot.org" in headers
+match "^X-BeenThere: openssh-unix-dev@mindrot.org" in headers
 	action "openssh-unix-dev"
 
 # default
