@@ -1,4 +1,4 @@
-.\" $Id: fdm.conf.5,v 1.69 2007-06-27 06:58:13 nicm Exp $
+.\" $Id: fdm.conf.5,v 1.70 2007-06-27 10:57:46 nicm Exp $
 .\"
 .\" Copyright (c) 2006 Nicholas Marriott <nicm@users.sourceforge.net>
 .\"
@@ -606,7 +606,7 @@ match all action "rewrite" continue
 # this rule will cat the rewritten message
 match all action "cat"
 .Ed
-.It Ic add-header Ar name Ar value
+.It Ic add-header Ar name Ic value Ar value
 Add a header
 .Ar name
 with contents
